// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action: Subaccounts clearSubaccount 1`] = `
Array [
  Object {
    "type": "CLEAR_SUBACCOUNT",
  },
]
`;

exports[`Action: Subaccounts editSubaccount 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "name": "Test Example",
      },
      "method": "PUT",
      "url": "subaccounts/123",
    },
    "type": "EDIT_SUBACCOUNT",
  },
]
`;

exports[`Action: Subaccounts getSubaccount 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "showErrorAlert": false,
      "url": "subaccounts/123",
    },
    "type": "GET_SUBACCOUNT",
  },
]
`;

exports[`Action: Subaccounts list 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "showErrorAlert": false,
      "url": "/subaccounts",
    },
    "type": "LIST_SUBACCOUNTS",
  },
]
`;
